# BHGP_2022

./: .gitignore  LICENSE  README.md  pyproject.toml
PFlogPF/: .gitignore  README.md  render_main_benchmark_fig.sh
PFlogPF/benchmark/: job_overview.yaml  run_clr_complete.R  run_clr_downsampling_missing.R  run_clr_dyngen.R  run_clr_gse184806.R  run_clr_local.R  run_clr_simulation.R  run_sirna_quantitative_recovery.R  run_sirna_quantitative_recovery_local.R  test_clr_aeh_downsampling.R
analysis/: Untitled.ipynb  angelidis_2019.ipynb  angelidis_cmp_corr_pca.ipynb  angelidis_depth.ipynb  angelidis_marker_genes.ipynb  angelidis_normalize.ipynb  angelidis_summary.ipynb  angelidis_var.ipynb  memory.ipynb  read_depth_per_year.ipynb  summary.ipynb
data/: datasets.txt  release_date.txt  size_log1p.txt  size_raw.txt  size_raw_gzip.txt  size_scalelog1pCP10k.txt  size_sctransform.txt  size_sctransform_gzip.txt
lean/: Invariance.lean  Main.lean  README.md  lake-manifest.json  lakefile.toml
notebooks/: comparison.ipynb
scripts/: README.md  bench_subset_genes.sh  filter.jq  gzip_dense.sh  metrics_celltype.py  metrics_knn.py  metrics_matrix.py  metrics_matrix.sh  metrics_methods_dense.py  metrics_methods_dense.sh  metrics_methods_sparse.py  metrics_methods_sparse.sh  mk_norm.py  mk_plot.py  norm_clr.py  norm_cp10k_log_scale.py  norm_cp10k_log_scale.sh  norm_sctransform.py  norm_sctransform.sh  norm_sparse.py  norm_sparse.sh  plot.py  plot_all.py  plot_all.sh  plot_bar.py  plot_celltype_bar.py  plot_sparse.py  plot_sparse.sh  plot_subset_genes.sh  plot_summary.py  utils.py
(+2152 files in other folders)
